@@ -1,3 +1,11 @@
+2009-07-17  Alexey Proskuryakov  <ap@webkit.org>
+
+        Reviewed by John Sullivan.
+
+        Get user default collation order via a CFLocale API when available.
+
+        * wtf/unicode/icu/CollatorICU.cpp: (WTF::Collator::userDefault):
+
 2009-07-17  Laszlo Gombos  <laszlo.1.gombos@nokia.com>
 
         Reviewed by Simon Hausmann.
